# great

./: Cargo.toml  README.md
.github/workflows/: CI.yaml
app/cli/: Cargo.toml
app/cli/src/: handler.rs  main.rs
app/cli/src/commands/: checkout.rs  delete.rs  error.rs  new.rs  push.rs  raise_pr.rs  resolve.rs  result.rs  sync.rs  trunk.rs  up.rs  update.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/branch/: checkout.rs  mod.rs  result.rs  trunk.rs
lib/src/merge/: handler.rs  mod.rs  result.rs
lib/src/remote/: mod.rs  result.rs
lib/src/repo/: commit.rs  mod.rs  open.rs  result.rs  stage.rs
lib/src/stash/: mod.rs
src/: error.rs  handler.rs  main.rs
src/commands/: checkout.rs  delete.rs  down.rs  edit.rs  error.rs  mod.rs  new.rs  push.rs  raise_pr.rs  resolve.rs  result.rs  stash.rs  sync.rs  trunk.rs  up.rs  update.rs
src/utils/: mod.rs
src/utils/merge/: conflict.rs  fast_forward.rs  handler.rs  mod.rs  normal.rs  result.rs  three_way_merge.rs
src/utils/pull/: mod.rs
src/utils/stack/: mod.rs  result.rs
src/utils/stash/: result.rs
