[package]
name = "great"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "great"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["now"] }
clap = { version = "4.5.8", features = ["derive"] }
regex = "1.10.5"
lib = { version = "0.1.0", path = "../../lib" }
